# ezazml

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: cicd_infra.md
.github/workflows/: deploy_infra_terraform.yml  destroy_infra_terraform.yml
aml_quickstart/cli/: cli.py
aml_quickstart/core/: log.py  settings.py
aml_quickstart/jobs/: job.py
aml_quickstart/services/: ml_client.py
aml_quickstart/services/data/: data.py  models.py
env/dev/: .env.example  .env.template  Makefile
env/dev/infra/: .terraform.lock.hcl  Makefile  auth.tf  compute.tf  main.tf  providers.tf  variables.tf  workspace.tf
ezazml/cli/: cli.py
ezazml/core/: log.py  settings.py
ezazml/jobs/: job.py
ezazml/services/: ml_client.py
ezazml/services/data/: data.py
iac/: Makefile  auth.tf  compute.tf  key_vault.tf  main.tf  outputs.tf  providers.tf  variables.tf  workspace.tf
notebooks/: dev.ipynb
scripts/: init_data.sh
tests/integration/: test_cli.py
tests/integration/data/: books.csv
tests/services/: test_ml_client.py
tests/services/data/: test_data.py
